# realmate-challenge-dev

./: pyproject.toml
app_chat/: urls.py
app_chat/migrations/: 0001_initial.py
app_chat/models/: __init__.py  conversation.py  message.py
app_chat/serializers/: __init__.py  conversation.py  message.py
app_chat/static/app_chat/css/: conversation.css  styles.css
app_chat/static/app_chat/js/: conversation.js
app_chat/templates/app_chat/: conversation.html  index.html
app_chat/views/: __init__.py  chat.py  ui.py
realmate_challenge/: settings.py  urls.py
